--- a/src/html/card.html
+++ b/src/html/card.html
@@ -4,7 +4,7 @@
     <div class="card-block">
       <div class="icon-container">
         <svg class="icon">
-          <use href="img/symbol-defs.svg#icon-glasses"></use>
+          <use href="img/cards/symbol-defs.svg#icon-glasses"></use>
         </svg>
       </div>
       <h2 class="card-block__title">sleek design</h2>
@@ -15,7 +15,7 @@
     <div class="card-block">
       <div class="icon-container">
         <svg class="icon">
-          <use href="img/symbol-defs.svg#icon-like"></use>
+          <use href="img/cards/symbol-defs.svg#icon-like"></use>
         </svg>
       </div>
       <h2 class="card-block__title">sleek design</h2>
@@ -26,7 +26,7 @@
     <div class="card-block">
       <div class="icon-container">
         <svg class="icon">
-          <use href="img/symbol-defs.svg#icon-light-bulb"></use>
+          <use href="img/cards/symbol-defs.svg#icon-light-bulb"></use>
         </svg>
       </div>
       <h2 class="card-block__title">sleek design</h2>
@@ -37,7 +37,7 @@
     <div class="card-block">
       <div class="icon-container">
         <svg class="icon">
-          <use href="img/symbol-defs.svg#icon-discuss-issue"></use>
+          <use href="img/cards/symbol-defs.svg#icon-discuss-issue"></use>
         </svg>
       </div>
       <h2 class="card-block__title">sleek design</h2>
