added company logo to clients

--- a/src/html/clients.html
+++ b/src/html/clients.html
@@ -12,17 +12,66 @@
     </div>
 
     <div class="clients-container">
-      <div class="clients-container__client-block"></div>
-      <div class="clients-container__client-block"></div>
-      <div class="clients-container__client-block"></div>
-      <div class="clients-container__client-block"></div>
-      <div class="clients-container__client-block"></div>
-      <div class="clients-container__client-block"></div>
-      <div class="clients-container__client-block"></div>
-      <div class="clients-container__client-block"></div>
-      <div class="clients-container__client-block"></div>
-      <div class="clients-container__client-block"></div>
-    </div>  
+      <a href="#" class="clients-container__client-block">
+        <svg class="clients-container__logo">
+          <use href="img/clients/symbol-defs.svg#icon-Biocon_Logo"></use>
+        </svg>
+      </a>
+
+      <a href="#" class="clients-container__client-block">
+        <svg class="clients-container__logo">
+          <use href="img/clients/symbol-defs.svg#icon-Bluestar_(bus_company)_logo"></use>
+        </svg>
+      </a>
+
+      <a href="#" class="clients-container__client-block">
+        <svg class="clients-container__logo">
+          <use href="img/clients/symbol-defs.svg#icon-Dell_Logo"></use>
+        </svg>
+      </a>
+
+      <a href="#" class="clients-container__client-block">
+        <svg class="clients-container__logo">
+          <use href="img/clients/symbol-defs.svg#icon-Expedia_logo"></use>
+        </svg>
+      </a>
+
+      <a href="#" class="clients-container__client-block">
+        <svg class="clients-container__logo">
+          <use href="img/clients/symbol-defs.svg#icon-Hewlett-Packard_logo"></use>
+        </svg>
+      </a>
+
+      <a href="#" class="clients-container__client-block">
+        <svg class="clients-container__logo">
+          <use href="img/clients/symbol-defs.svg#icon-West-Japan-Railway-Company-Logo"></use>
+        </svg>
+      </a>
+
+      <a href="#" class="clients-container__client-block">
+        <svg class="clients-container__logo">
+          <use href="img/clients/symbol-defs.svg#icon-NTT_company_logo"></use>
+        </svg>
+      </a>
+
+      <a href="#" class="clients-container__client-block">
+        <svg class="clients-container__logo">
+          <use href="img/clients/symbol-defs.svg#icon-Yodel_(company)_logo"></use>
+        </svg>
+      </a>
+
+      <a href="#" class="clients-container__client-block">
+        <svg class="clients-container__logo">
+          <use href="img/clients/symbol-defs.svg#icon-Williams_Companies_logo"></use>
+        </svg>
+      </a>
+
+      <a href="#" class="clients-container__client-block">
+        <svg class="clients-container__logo">
+          <use href="img/clients/symbol-defs.svg#icon-AnD_Company_logo"></use>
+        </svg>
+      </a>
+    </div>
   </div>
 
 </section>
