--- a/src/html/header.html
+++ b/src/html/header.html
@@ -40,7 +40,7 @@
           <div class="underline__circle"></div>
           <div class="underline__line"></div>
         </div>
-        <p class="header-section__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae eius ratione officiis obcaecati perferendis, corporis fuga ipsa adipisci quibusdam non ab deleniti quisquam, corrupti sed doloribus nulla molestiae, quis esse et temporibus velit amet earum. Placeat debitis, numquam rem incidunt consectetur est, quas ut voluptatum temporibus aliquam. Beatae, ut expedita.</p>
+        <p class="header-section__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae eius ratione officiis obcaecati perferendis, corporis fuga ipsa adipisci quibusdam non ab deleniti quisquam, corrupti sed doloribus nulla molestiae, quis esse et temporibus velit.</p>
         <div class="button-block button-block--mt">
           <a href="#" class="button-block__button button-block-button--mr">get started now</a>
           <a href="#" class="button-block__button">learn more</a>
