--- a/src/html/history.html
+++ b/src/html/history.html
@@ -7,7 +7,7 @@
         <h2 class="history-section__title">our history</h2>
         <p class="history-section__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut deleniti, quaerat commodi iure unde impedit ipsam exercitationem obcaecati molestiae nesciunt quasi quod eius debitis rerum quia dicta nobis iste, aliquam fugiat ducimus praesentium error est ab voluptates similique. Eos sed et debitis at amet quod ipsa, consequatur natus rem soluta!</p>
         <p class="history-section__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus vel molestiae vero maxime sunt, minima laboriosam. Voluptas nemo alias minus, praesentium optio, dolorum debitis explicabo laudantium sunt a, aperiam temporibus et rerum ad ipsam adipisci est ullam illum animi! Explicabo magni nam cupiditate vitae nihil!</p>
-      <div class="button-block button-block--mt button-block--flex-start">
+      <div class="button-block button-block--mt-2 button-block--flex-start">
         <a href="#" class="button-block__button button-block-button--red">browse our work</a>
       </div>
     </article>
