--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,13 +9,21 @@
 </head>
 <body>
   //= header.html
+  <!-- CARD SECTION -->
   //= card.html
+  <!-- HISTORY SECTION -->
   //= history.html
+  <!-- SERVICES SECTION -->
   //= services.html
+  <!-- PRICING SECTION -->
   //= pricing.html
+  <!-- CLIENTS SECTION -->
   //= clients.html
+  <!-- BLOG SECTION -->
   //= blog.html
+  <!-- FORM SECTION -->
   //= form.html
+  <!-- FOOTER SECTION -->
   //= footer.html
 </body>
 </html>
