added retina image

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -50,7 +50,7 @@
           </svg>
         </a>
       </nav>
-      <p class="footer-section__author-description">Kazi Erfan &#169 All Rights Reserved</p>
+      <p class="footer-section__author-description">Kazi Erfan &#169; All Rights Reserved</p>
     </div>
   </div>
 </section>
