added some changes to header and blog

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,35 +1,19 @@
   <header class="header">
     <div class="container">
       <nav class="navigation">
-        <div class="navigation__item">
           <a href="#" class="navigation__link">home</a>
-        </div>
-        <div class="navigation__item">
           <a href="#" class="navigation__link">about us</a>
-        </div>
-        <div class="navigation__item">
           <a href="#" class="navigation__link">portfolio</a>
-        </div>
-        <div class="navigation__item">
           <a href="#" class="navigation__link">pricing</a>
-        </div>
-        <div class="navigation__item">
           <a href="#" class="navigation__link">team</a>
-        </div>
-        <div class="navigation__item">
           <a href="#" class="navigation__link">blog</a>
-        </div>
-        <div class="navigation__item">
           <a href="#" class="navigation__link">contact</a>
-        </div>
       </nav>
       <section class="header-section">
         <h2 class="header-section__subtitle">Our Clients Are Our First Priority</h2>
         <h1 class="header-section__title">welcome to bino</h1>
-        <div class="underline underline--mb-3">
-          <div class="underline__line"></div>
-          <div class="underline__circle"></div>
-          <div class="underline__line"></div>
+        <div class="underline-container">
+          <div class="underline-container__underline"></div>
         </div>
         <p class="header-section__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae eius ratione officiis obcaecati perferendis, corporis fuga ipsa adipisci quibusdam non ab deleniti quisquam, corrupti sed doloribus nulla molestiae, quis esse et temporibus velit.</p>
         <div class="button-block button-block--mt">
