--- a/src/html/blog.html
+++ b/src/html/blog.html
@@ -11,7 +11,9 @@
 
   <div class="gallery-container">
     <div class="gallery-container__item">
-      <div class="gallery-container__img--first"></div>
+      <div class="gallery-container__img-block">
+        <img class="gallery-container__img" src="img/blog/blog-img-1.png" alt="image from our blog">
+      </div>
       <div class="gallery-container__body">
         <div class="gallery-container__array"></div>
         <p class="gallery-container__description">art / t-shirt</p>
@@ -23,7 +25,9 @@
     </div>
 
     <div class="gallery-container__item">
-      <div class="gallery-container__img--second"></div>
+      <div class="gallery-container__img-block">
+        <img class="gallery-container__img" src="img/blog/blog-img-2.png" alt="image from our blog">
+      </div>
       <div class="gallery-container__body">
         <div class="gallery-container__array"></div>
         <p class="gallery-container__description">art / t-shirt</p>
@@ -35,7 +39,10 @@
     </div>
 
     <div class="gallery-container__item">
-      <div class="gallery-container__img--third"></div>
+      <div class="gallery-container__img-block">
+        <img class="gallery-container__img" src="img/blog/blog-img-3.png" alt="image from our blog">
+      </div>
+
       <div class="gallery-container__body">
         <div class="gallery-container__array"></div>
         <p class="gallery-container__description">art / t-shirt</p>
@@ -47,7 +54,9 @@
     </div>
 
     <div class="gallery-container__item">
-      <div class="gallery-container__img--fourth"></div>
+      <div class="gallery-container__img-block">
+        <img class="gallery-container__img" src="img/blog/blog-img-4.png" alt="image from our blog">
+      </div>
       <div class="gallery-container__body">
         <div class="gallery-container__array"></div>
         <p class="gallery-container__description">art / t-shirt</p>
