--- a/src/html/blog.html
+++ b/src/html/blog.html
@@ -2,10 +2,8 @@
   <div class="title-container">
     <h2 class="title-container__title">our blog</h2>
     <p class="title-container__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi nostrum eveniet facere beatae, magni natus.</p>
-    <div class="underline">
-      <div class="underline__line underline__line--black"></div>
-      <div class="underline__circle"></div>
-      <div class="underline__line underline__line--black"></div>
+    <div class="underline-container">
+      <div class="underline-container__underline underline-container__underline--black"></div>
     </div>
   </div>
 
@@ -18,7 +16,6 @@
         <div class="gallery-container__array"></div>
         <p class="gallery-container__description">art / t-shirt</p>
         <h2 class="gallery-container__title">t-shirt design</h2>
-        <div class="gallery-container__underline"></div>
         <p class="gallery-container__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae debitis praesentium tenetur assumenda repellendus placeat totam libero. Quis, nostrum, repudiandae? Consequatur ullam minima officia perferendis nulla qui quaerat modi fugiat quasi. Facere necessitatibus, eius nesciunt.</p>
         <a href="#" class="gallery-container__read-more">Read More</a>
       </div>
@@ -32,7 +29,6 @@
         <div class="gallery-container__array"></div>
         <p class="gallery-container__description">art / t-shirt</p>
         <h2 class="gallery-container__title">t-shirt design</h2>
-        <div class="gallery-container__underline"></div>
         <p class="gallery-container__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus sunt ipsa eaque alias, voluptates quia nostrum eius aperiam earum eos eligendi odio repudiandae ducimus officia cupiditate. Quis, itaque? Ducimus necessitatibus maxime officia ipsum fugiat, eum.</p>
         <a href="#" class="gallery-container__read-more">Read More</a>
       </div>
@@ -47,7 +43,6 @@
         <div class="gallery-container__array"></div>
         <p class="gallery-container__description">art / t-shirt</p>
         <h2 class="gallery-container__title">t-shirt design</h2>
-        <div class="gallery-container__underline"></div>
         <p class="gallery-container__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, maxime, nobis perspiciatis repudiandae itaque eaque quod laboriosam nihil aperiam facilis, earum, rem architecto. Repudiandae id eaque fuga sint distinctio consequatur cupiditate esse perspiciatis numquam voluptate.</p>
         <a href="#" class="gallery-container__read-more">Read More</a>
       </div>
@@ -61,7 +56,6 @@
         <div class="gallery-container__array"></div>
         <p class="gallery-container__description">art / t-shirt</p>
         <h2 class="gallery-container__title">t-shirt design</h2>
-        <div class="gallery-container__underline"></div>
         <p class="gallery-container__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias maxime facere ut vero dicta natus minima at, modi fugiat harum vitae perspiciatis quidem non laborum porro asperiores eum? Non, neque. Debitis, atque totam. Eius, unde.</p>
         <a href="#" class="gallery-container__read-more">Read More</a>
       </div>
