--- a/src/html/clients.html
+++ b/src/html/clients.html
@@ -4,10 +4,8 @@
     <div class="title-container">
       <h2 class="title-container__title">our pricing</h2>
       <p class="title-container__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi nostrum eveniet facere beatae, magni natus.</p>
-      <div class="underline">
-        <div class="underline__line underline__line--black"></div>
-        <div class="underline__circle"></div>
-        <div class="underline__line underline__line--black"></div>
+      <div class="underline-container">
+        <div class="underline-container__underline underline-container__underline--black"></div>
       </div>
     </div>
 
